--- a/templates/orders/partials/modals/success_order.html
+++ b/templates/orders/partials/modals/success_order.html
@@ -14,17 +14,14 @@
                     <div class="success-line col-xs-12">
                         <span class="line">
                             <h2 class="header">
-                                <span>{% trans 'Success' %}</span>
+                                <span>{% trans 'Success' %} <span class="checkmark">&#x2714;</span></span>
                             </h2>
                         </span>​
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-xs-12">
-                        <span class="success-icon-container">
-                            <span class="helper"></span>
-                            <span class="fa fa-3x fa-check"></span>
-                        </span>
+
                     </div>
                 </div>
 
