--- a/static/scss/components/orders.scss
+++ b/static/scss/components/orders.scss
@@ -1,22 +1,22 @@
 .menu2 {
     .tooltip-icon { font-size: 20px; }
-    .user-authenticated-top { display: inline-block; width: 100%;
+    .user-authenticated-top, .user-anonymous .register { 
         h4 { display: inline-block; font-size: 30px; }
         .tooltip-icon { position: relative; top: -3px; right: -3px; }
     }
+    .user-anonymous .register h4 { margin-bottom: 25px; }
     label { font-size: 25px; margin: 0; width: 290px; text-align: left; }
-    input { height: 50px; font-size: 20px; width: 100%; padding: 0 30px 0 15px; margin-bottom: 30px; }
-    .intl-tel-input ul.country-list { max-width: 290px; margin-left: -24px; }
+    input { height: 50px; font-size: 20px; width: 100%; padding: 0 30px 0 15px; }
+    .intl-tel-input { width: 100%; 
+        ul.country-list { margin-left: -24px; }
+    } 
     .auth-steps .tooltip-icon {  position: absolute; top: 13px; right: 25px; }
+    .btn { margin-top: 30px; }
 } 
 
-#verification_code {
-    width: 290px;
-}
+h4.phone-verification, h4.email-verification { text-align: center; margin-top: 25px;  }
 
-.line {
-    display:block;
-
+.line { display:block;
     &.green .header {
         border-color: #8BC53F;
         border-width: 4px;
