--- a/templates/orders/partials/steps/partials/step_anonym_auth_fields.html
+++ b/templates/orders/partials/steps/partials/step_anonym_auth_fields.html
@@ -9,14 +9,16 @@
     <div class="step2 hidden">
         <div class="row user-anonymous">
             <div class="col-xs-10 col-xs-offset-1 register">
-                <label for="user-login-key">
+                <h4>
                     {% trans "Access Key" %}
-                </label>
+                    <a class="tooltip-icon"
+                        data-toggle="tooltip"
+                        data-placement="top"
+                        title="{%trans 'Copy and save. If you lose this key you will not be able to access your orders.'%}">
+                        <i class="fa fa-info-circle" ></i>
+                    </a>
+                </h4>
                 <input type="text" id="user-login-key" readonly="readonly">
-                <a data-toggle="popover" title="{% trans 'What should you do with Access Key?'%}"
-                   data-content="{%trans 'Copy and save. If you loose this key you will not be able to access your orders.'%}">
-                    <i class="fa fa-info-circle" style="font-size:24px"></i>
-                </a>
             </div>
         </div>
     </div>
