--- a/templates/orders/partials/steps/partials/step_authentification_fields.html
+++ b/templates/orders/partials/steps/partials/step_authentification_fields.html
@@ -15,21 +15,20 @@
 <div class="auth-steps user-authenticated">
     <div class="step1">{% trans "Enter your phone" as enter_your_phone %}<br>
         <div class="row phone-verification hidden user-authenticated">
-            <div class="col-xs-10 col-xs-offset-1 register">
-                <label for="phone">
-                    {% trans "Mobile number" %}
-                </label>
+            <div class="col-xs-10 col-xs-offset-1 col-md-6 col-md-offset-3 register">
                 <input type="text" name="phone" id="phone" class="phone val"
                 value="{% if user.is_authenticated  %}{{ user.profile.phone }}
                 {% else %}+7{% endif %}">
-                <a data-toggle="popover" title="{% trans 'Do you need to have a registered account?'%}"
-                   data-content="{%trans 'No. If you do not have an account related to this phone number it will be created automatically. Otherwise, it will login to existing one.'%}">
-                    <i class="fa fa-info-circle" style="font-size:24px"></i>
+                <a class="tooltip-icon"
+                    data-toggle="tooltip"
+                    data-placement="left"
+                    title="{%trans 'You do not have an account related to this phone number as it will be created automatically. Otherwise, it will login to existing one.'%}">
+                    <i class="fa fa-info-circle" ></i>
                 </a>
             </div>
         </div>
         <div class="row email-verification user-authenticated">
-            <div class="col-xs-10 col-xs-offset-1 register">
+            <div class="col-xs-10 col-xs-offset-1 col-md-6 col-md-offset-3 register">
                 <input type="email" name="email" id="email" class="email val text-center" placeholder="{% trans 'Enter your email' %}" size="25">
                 <a class="tooltip-icon"
                     data-toggle="tooltip"
@@ -43,10 +42,10 @@
 
     <div class="step2 hidden">
         <div class="row user-authenticated">
-            <div class="col-xs-10 col-xs-offset-1 register">
+            <div class="col-xs-10 col-xs-offset-1 col-md-6 col-md-offset-3 register">
                 <label for="verification_code">
-                    <p class="phone-verification hidden">{% trans "Code from SMS" %}</p>
-                    <p class="email-verification">{% trans "Code from Email" %}</p>
+                    <h4 class="phone-verification hidden">{% trans "Code from SMS" %}</h4>
+                    <h4 class="email-verification">{% trans "Code from Email" %}</h4>
                 </label>
                 <input type="text" name="verification_code" id="verification_code">
             </div>
