fixup! Add a parameter from Django settings for confirmation code length.

--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -45,6 +45,7 @@
 
     <script type="text/javascript">
         window.recaptchaSitekey = '{{ RECAPTCHA_SITEKEY }}';
+        window.confirmationCodeLength = '{{ CONFIRMATION_CODE_LENGTH }}';
     </script>
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 
