Fix test_sell_1 selenium test bug by adjusting unique_ref element.

--- a/templates/orders/partials/modals/order_success_sell.html
+++ b/templates/orders/partials/modals/order_success_sell.html
@@ -43,6 +43,11 @@
                     {% trans 'We will place the following reference in the comment to our payment:' %}
                 </div>
             </div>
+            <div class="row">
+                <div class="col col-xs-12 unique_ref">
+                    <p><strong>{{unique_ref}}</strong></p>
+                </div>
+            </div>
         {% else %}
             <div class="row">
                 <div class="col col-xs-12 unique_ref_container">
