--- a/templates/orders/partials/steps/partials/step_authentification_fields.html
+++ b/templates/orders/partials/steps/partials/step_authentification_fields.html
@@ -43,11 +43,11 @@
     <div class="step2 hidden">
         <div class="row user-authenticated">
             <div class="col-xs-10 col-xs-offset-1 col-md-6 col-md-offset-3 register">
-                <label for="verification_code">
+                <label for="verification_code" class="full-width">
                     <h4 class="phone-verification hidden">{% trans "Code from SMS" %}</h4>
                     <h4 class="email-verification">{% trans "Code from Email" %}</h4>
                 </label>
-                <input type="text" name="verification_code" id="verification_code">
+                <input type="text" name="verification_code" id="verification_code" class="full-width">
             </div>
         </div>
     </div>
