--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -941,7 +941,7 @@ input.payment-icon:hover{
     width: 63px;
     height: 60px;
     text-align: center;
-    margin: 20px auto 0 auto;
+    margin: 10px auto;
 }
 .success-icon-container .helper {
     height: 100%;
