--- a/templates/orders/partials/steps/step_base.html
+++ b/templates/orders/partials/steps/step_base.html
@@ -1,4 +1,4 @@
-<div id="{{ id }}" class="menuSection tab-pane {% if id == 'menu1' %} active in {% elif id == 'menu2' %} hidden {% elif id == 'menu3' %} hidden  {% else %} fade {% endif %}">
+<div id="{{ id }}" class="menuSection tab-pane {% if id == 'menu1' %} active in {% elif id == 'menu2' %} panel hidden {% elif id == 'menu3' %} panel hidden  {% else %} fade {% endif %}">
     <div class="row {{ id }}">
         {% block step_content %}
         {% endblock %}
