--- a/templates/orders/partials/modals/order_success_sell.html
+++ b/templates/orders/partials/modals/order_success_sell.html
@@ -16,8 +16,8 @@
                 <div class="input-group">
                     <input type="text" class="form-control element-to-copy text-center" id="deposit-address-sell" readonly="readonly" value="{{address}}" />
 
-                    <span class="input-group-addon input-group-addon-action">
-                        <i class="fa fa-clipboard" aria-hidden="true" data-clipboard-target="#deposit-address-sell"></i>
+                    <span class="input-group-addon input-group-addon-action copy-address" data-clipboard-target="#deposit-address-sell">
+                        <i class="fa fa-clipboard" aria-hidden="true"></i>
                     </span>
                 </div>
             </div>
