Adjust wallet address input border color.

--- a/static/scss/components/orders.scss
+++ b/static/scss/components/orders.scss
@@ -58,4 +58,4 @@ h4.phone-verification, h4.email-verification { text-align: center; margin: 25px 
     text-align: left;
 }
 
-#deposit-address-sell, #deposit-address-buy { height: 30px; }
+#deposit-address-sell, #deposit-address-buy { height: 30px; border-color: #ccc; }
