Feature/disabled input code field (#410)
* Add required HTML/CSS for disabled input field on user authentication during order steps.

* Speed up compile times for front-end assets (by ~40s, < 20x faster).

* Revert "Speed up compile times for front-end assets (by ~40s, < 20x faster)."

This reverts commit d25b69cca70d047a0d9608a8fa6dc47b16e7bb4a.

* Remove sms/email switch for auth. Use same disabled field for both.

* Add authentication styling.

* Adjust old input styling margin.

* wait for sms token on selenium

* Auto-change user login input field between phone or email based on user input. Refactor some of the JS into ES6 modules.

* Fix user login form.

* Add required HTML/CSS for disabled input field on user authentication during order steps.

* Speed up compile times for front-end assets (by ~40s, < 20x faster).

* Revert "Speed up compile times for front-end assets (by ~40s, < 20x faster)."

This reverts commit d25b69cca70d047a0d9608a8fa6dc47b16e7bb4a.

* Remove sms/email switch for auth. Use same disabled field for both.

* Add authentication styling.

* Adjust old input styling margin.

* Auto-change user login input field between phone or email based on user input. Refactor some of the JS into ES6 modules.

* Fix user login form.

* Fix auto-submit for phone verification.

* Change CSS selector for create-acc button back. Adjust error message for wrong phone/email.

* Fix test for order login steps in accordance to new disabled input changes.

* Ajust selenium login to new mode (without switshing button)

* Change base Selenium test to reflect seemless login changes.

* Fix logic error that prevented correct phone seemless login.

--- a/static/scss/components/general.scss
+++ b/static/scss/components/general.scss
@@ -1,4 +1,5 @@
 label, input { text-align: left; cursor: pointer; }
+input:disabled { background: rgba(230, 230, 230, 0.44); cursor: not-allowed !important; }
 
 .glyphicon { background-color: transparent; }
 
