--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -1,6 +1,7 @@
 @import "./components/fonts.scss";
 @import "./components/general.scss";
 @import "./components/orders.scss";
+@import "./components/authentication.scss";
 
 /*new design start*/
 .page-header + label{
