--- a/templates/orders/partials/steps/partials/step_authentification_fields.html
+++ b/templates/orders/partials/steps/partials/step_authentification_fields.html
@@ -14,40 +14,30 @@
 
 <div class="auth-steps user-authenticated">
     <div class="step1">{% trans "Enter your phone" as enter_your_phone %}<br>
-        <div class="row phone-verification hidden user-authenticated">
+        <div class="row user-authenticated">
             <div class="col-xs-10 col-xs-offset-1 col-md-6 col-md-offset-3 register">
-                <input type="text" name="phone" id="phone" class="phone val"
-                value="{% if user.is_authenticated  %}{{ user.profile.phone }}
-                {% else %}+7{% endif %}">
+                <div id="phone-verification" class="hidden">
+                    <input type="text" name="phone" id="phone" class="phone val">
+                </div>
+                
+                <div id="email-verification">
+                    <input type="text" name="email" id="email" class="email val text-center" placeholder="{% trans 'Enter your email or SMS' %}" size="25">
+                </div>
+
                 <a class="tooltip-icon"
                     data-toggle="tooltip"
                     data-placement="left"
-                    title="{%trans 'You do not have an account related to this phone number as it will be created automatically. Otherwise, it will login to existing one.'%}">
-                    <i class="fa fa-info-circle" ></i>
-                </a>
-            </div>
-        </div>
-        <div class="row email-verification user-authenticated">
-            <div class="col-xs-10 col-xs-offset-1 col-md-6 col-md-offset-3 register">
-                <input type="email" name="email" id="email" class="email val text-center" placeholder="{% trans 'Enter your email' %}" size="25">
-                <a class="tooltip-icon"
-                    data-toggle="tooltip"
-                    data-placement="left"
-                    title="{%trans 'If you do not have an account related to this email address it will be created automatically. Otherwise, it will login to existing one.'%}">
+                    title="{%trans 'If you do not have an account related to this email address or phone number it will be created automatically. Otherwise, it will login to existing one.'%}">
                     <i class="fa fa-info-circle" ></i>
                 </a>
             </div>
         </div>
     </div>
 
-    <div class="step2 hidden">
+    <div class="step2">
         <div class="row user-authenticated">
             <div class="col-xs-10 col-xs-offset-1 col-md-6 col-md-offset-3 register">
-                <label for="verification_code" class="full-width">
-                    <h4 class="phone-verification hidden">{% trans "Code from SMS" %}</h4>
-                    <h4 class="email-verification">{% trans "Code from Email" %}</h4>
-                </label>
-                <input type="text" name="verification_code" id="verification_code" class="full-width authentication-step" maxlength="{{ SMS_TOKEN_LENGTH }}">
+                <input type="text" name="verification_code" id="verification_code" class="full-width authentication-step" maxlength="{{ SMS_TOKEN_LENGTH }}" placeholder="{% trans "Copy code from SMS/Email" %}" disabled>
             </div>
         </div>
     </div>
