--- a/static/scss/components/authentication.scss
+++ b/static/scss/components/authentication.scss
@@ -14,7 +14,7 @@
     .btn { margin-top: 30px; }
 
 	.step2 {
-		input#verification_code { margin-top: 15px; }
+		input#verification_code { margin-top: 15px; border: 1px solid #dfdfdf; }
 	}
 } 
 
