--- a/templates/orders/orders_list.html
+++ b/templates/orders/orders_list.html
@@ -3,7 +3,14 @@
 {% load staticfiles %}
 {% load bootstrap3 %}
 {% block main %}
-    {% include 'orders/partials/partial_orders.html' %}
+	{% trans "Current Orders" as current_orders_title %}
+	{% trans "Expired / Released Orders" as expired_orders_title %}
+
+    {% include "orders/partials/partial_orders.html" with orders=orders title=current_orders_title is_expired_orders=False show_expired=show_expired %}
+
+    {% if show_expired %}
+    	{% include "orders/partials/partial_orders.html" with orders=expired_orders title=expired_orders_title is_expired_orders=True %}
+    {% endif %}
 {% endblock %}
 {% block extra_js_footer %}
 
