--- a/templates/orders/partials/order_pagination.html
+++ b/templates/orders/partials/order_pagination.html
@@ -1,8 +1,10 @@
 {% load i18n %}
+
+{% if is_expired_orders %}
 <div class="pagination">
     <span class="step-links">
         {% if orders.has_previous %}
-            <a href="?page={{ orders.previous_page_number }}">{% trans "previous" %}</a>
+            <a href="?show_expired=true&page={{ orders.previous_page_number }}">{% trans "previous" %}</a>
         {% endif %}
 
         <span class="current">
@@ -12,14 +14,18 @@
         </span>
 
         {% if orders.has_next %}
-            <a href="?page={{ orders.next_page_number }}">{% trans "next" %}</a>
+            <a href="?show_expired=true&page={{ orders.next_page_number }}">{% trans "next" %}</a>
         {% endif %}
     </span>
 </div>
-<div class="orders_toggle">
-    {% if old_orders_visible %}
-        <a href="#" class="hide_old">{% trans "Hide expired and released" %}</a>
-    {% else%}
-        <a href="#" class="show_old">{% trans "Show expired and released" %}</a>
-    {% endif %}
-</div>
+{% endif %}
+
+{% if is_expired_orders == False %}
+    <div class="orders_toggle">
+        {% if show_expired %}
+            <a href="{% url 'orders.orders_list' %}" class="hide_old">{% trans "Hide expired and released" %}</a>
+        {% else %}
+            <a href="?show_expired=true" class="show_old">{% trans "Show expired and released" %}</a>
+        {% endif %}
+    </div>
+{% endif %}
