--- a/templates/orders/partials/orders_header.html
+++ b/templates/orders/partials/orders_header.html
@@ -1,25 +1,30 @@
 {% load i18n %}
 {% load bootstrap3 %}
 <div class="page-header">
-    <h1>
-        {% trans "Current Orders" %}
+    <h1>        
+        {{ title }}
     </h1>
     <div class="line-order" >
     </div>
 </div>
 
 <div class="row">
+    {% if is_expired_orders == False %}
     <div class="col-xs-2">
         <a href="{% url 'orders.add_order' %}">
-            <button type="button" class="btn btn-success" > {% trans "New Order" %}</button>
+            <button type="button" class="btn btn-success">{% trans "New Order" %}</button>
         </a>
     </div>
-    <div class="col-xs-10" >
+    {% endif %}
+    
+    {% if is_expired_orders == True %}
+    <div class="col-xs-12" >
         <form method="post" class="form form-search">
-            <button type="submit" class="btn btn-default search-order pull-right" ><i class="fa fa-search"></i>&nbsp;</button>
-            {% bootstrap_field form.date show_label=False form_group_class="form-group col-xs-10 nopadding pull-right" %}
+            <button type="submit" class="btn btn-default search-order" ><i class="fa fa-search"></i>&nbsp;</button>
+            {% bootstrap_field form.date show_label=False form_group_class="form-group nopadding pull-left" %}
 
             {% csrf_token %}
         </form>
     </div>
+    {% endif %}
 </div>
