--- a/templates/orders/partials/steps/partials/step_authentification_fields.html
+++ b/templates/orders/partials/steps/partials/step_authentification_fields.html
@@ -21,7 +21,7 @@
                 </div>
                 
                 <div id="email-verification">
-                    <input type="text" name="email" id="email" class="email val text-center" placeholder="{% trans 'Enter your email or SMS' %}" size="25">
+                    <input type="text" name="email" id="email" class="email val text-center" placeholder="{% trans 'Enter your email or phone number' %}" size="25">
                 </div>
 
                 <a class="tooltip-icon"
@@ -37,7 +37,7 @@
     <div class="step2">
         <div class="row user-authenticated">
             <div class="col-xs-10 col-xs-offset-1 col-md-6 col-md-offset-3 register">
-                <input type="text" name="verification_code" id="verification_code" class="full-width authentication-step" maxlength="{{ SMS_TOKEN_LENGTH }}" placeholder="{% trans "Copy code from SMS/Email" %}" disabled>
+                <input type="text" name="verification_code" id="verification_code" class="full-width authentication-step" maxlength="{{ SMS_TOKEN_LENGTH }}" placeholder="{% trans "Copy code from phone/email" %}" disabled>
             </div>
         </div>
     </div>
