--- a/templates/orders/partials/steps/partials/step_authentification_fields.html
+++ b/templates/orders/partials/steps/partials/step_authentification_fields.html
@@ -38,6 +38,13 @@
         <div class="row user-authenticated">
             <div class="col-xs-10 col-xs-offset-1 col-md-6 col-md-offset-3 register">
                 <input type="text" name="verification_code" id="verification_code" class="full-width authentication-step" maxlength="{{ SMS_TOKEN_LENGTH }}" placeholder="{% trans "Copy code from phone/email" %}" disabled>
+
+                <a class="tooltip-icon"
+                    data-toggle="tooltip"
+                    data-placement="left"
+                    title="{%trans 'Please enter the code sent to you via phone or email.' %}">
+                    <i class="fa fa-info-circle" ></i>
+                </a>
             </div>
         </div>
     </div>
