Feature/anonymous login controls (#430)
* Add necessary markup and CSS for simpler anonymous login controls.

* Add missing SCSS components.

--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -1,7 +1,9 @@
+@import "./components/variables.scss";
 @import "./components/fonts.scss";
 @import "./components/general.scss";
 @import "./components/orders.scss";
 @import "./components/authentication.scss";
+@import "./components/anonymous_login.scss";
 
 /*new design start*/
 .page-header + label{
