--- a/templates/orders/partials/steps/partials/step_anonym_auth_fields.html
+++ b/templates/orders/partials/steps/partials/step_anonym_auth_fields.html
@@ -18,7 +18,16 @@
                         <i class="fa fa-info-circle" ></i>
                     </a>
                 </h4>
-                <input type="text" id="user-login-key" readonly="readonly">
+
+                <div class="input-group">
+                    <input type="text" class="form-control" id="user-login-key" readonly="readonly" />
+
+                    <i class="fa fa-eye show-hide-key" aria-hidden="true"></i>
+
+                    <span class="input-group-addon copy-key" data-clipboard-target="#user-login-key" >
+                        <i class="fa fa-clipboard" aria-hidden="true"></i>
+                    </span>
+                </div>
             </div>
         </div>
     </div>
