--- a/static/scss/components/general.scss
+++ b/static/scss/components/general.scss
@@ -7,6 +7,6 @@ input:disabled { background: rgba(230, 230, 230, 0.44); cursor: not-allowed !imp
 
 .full-width { width: 100% !important; }
 
-.fa-clipboard:hover, .input-group-addon-action { cursor: pointer; }
+.fa-clipboard:hover, .input-group-addon-action, .copy-key { cursor: pointer; }
 
 .form-control[disabled], .form-control[readonly], fieldset[disabled] .form-control { background-color: #fff; }
