Feature/make trading more transparent (#434)
* Add order type to orders API.

* Initial rudimentary logic for recent orders showing on main screen.

* Fix some JS linting errors.

* Add date to orders API.

* Setup date. Install momentjs. Remove initial orders on recent_orders view.

* Add correct sending/receiving amounts. Calculate rate. Adjust date format.

* Add icon based on order type.

* Align table elements to the left. Show recent orders on main screen only.

* Small CSS/HTML fixes.

* Use RECENT_ORDERS_LENGTH setting for showing fixed number of recent orders. Fix scenario where there are no recent orders (probably only applicable on localhost when developing).

* Adjust orders API to include pair name. Add currencies traded in recent orders table.

--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -4,6 +4,7 @@
 @import "./components/orders.scss";
 @import "./components/authentication.scss";
 @import "./components/anonymous_login.scss";
+@import "./components/recent_orders.scss";
 
 /*new design start*/
 .page-header + label{
@@ -953,11 +954,6 @@ input.payment-icon:hover{
 .success-icon-container .fa {
     color: #FFFFFF;
     vertical-align: middle;
-}
-
-tr th, tr td {
-    margin: auto;
-    text-align: center;
 }
 
 body #nprogress .bar {
