--- a/templates/orders/partials/order_row_desktop.html
+++ b/templates/orders/partials/order_row_desktop.html
@@ -19,10 +19,10 @@
         <td>
         {% include 'orders/partials/forms/payment_toggle.html' %}
         </td>
-        <td>
+        <td class="text-center">
             {% include 'orders/partials/released_indicator.html' %}
         </td>
-        <td>
+        <td class="text-center">
             {% include 'orders/partials/completed_indciator.html' %}
         </td>
 
