--- a/templates/orders/partials/steps/step_amount.html
+++ b/templates/orders/partials/steps/step_amount.html
@@ -93,5 +93,6 @@
     {% include 'payments/partials/modals/sell.html' with id="swiftSellModal" form="swift" method="swift" legend="Get paid using a SWIFT transfer" icon="icons/small/swift.png" %}
     {% include 'payments/partials/modals/sell.html' with id="okpaySellModal" method="okpay" form="email" legend="Get paid to your OkPay wallet" icon="icons/small/okpay.png" %}
     {% include 'payments/partials/modals/sell.html' with id="payeerSellModal" method="payeer" form="email" legend="Get paid to your Payeer wallet" icon="icons/small/payeer.png" %}
-
+    
+    {% include 'orders/partials/recent_orders.html' with id="recent-orders" %}
 {% endblock %}
