--- a/templates/orders/partials/orders_desktop.html
+++ b/templates/orders/partials/orders_desktop.html
@@ -9,14 +9,14 @@
         <th>{% trans "Price" %}</th>
         <th>{% trans "Volume" %}</th>
         <th>{% trans "Paid" %}</th>
-        <th>{% trans "Released" %}</th>
-        <th>{% trans "Completed" %}</th>
+        <th class="text-center">{% trans "Released" %}</th>
+        <th class="text-center">{% trans "Completed" %}</th>
         <th>{% trans "Withdraw Address" %}</th>
     </tr>
     {% for order in orders %}
-              {% include 'orders/partials/order_row_desktop.html' %}
+        {% include 'orders/partials/order_row_desktop.html' %}
     {% empty %}
-        <tr>
+        <tr class="text-center">
             <td colspan="10">
                 <h3>{% trans "No records found" %}</h3>
             </td>
