--- a/templates/core/partials/seo_footer.html
+++ b/templates/core/partials/seo_footer.html
@@ -2,21 +2,21 @@
 {% load i18n %}
 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 footer">
   <div class="footer_container">
-    	<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-        	<a href="#"><img src="{% static 'images/logo-footer.png' %}" alt="NEXCHANGE" class="footer_logo"></a>
+      <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+          <a href="#"><img src="{% static 'images/logo-footer.png' %}" alt="NEXCHANGE" class="footer_logo"></a>
         </div>
-       	<div class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
-        	<h4>{% trans 'ACCOUNT' %} </h4>
+        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
+          <h4>{% trans 'ACCOUNT' %} </h4>
             {% if user.is_authenticated %}
                 <a href="{% url 'accounts.user_profile' %}">{% trans 'Profile' %}</a>
             {% else %}
                 <a href="{% url 'accounts.login' %}">{% trans 'Login' %}</a>
-			    <a href="{% url 'accounts.register' %}">{% trans 'SignUp' %}</a>
+          <a href="{% url 'accounts.register' %}">{% trans 'SignUp' %}</a>
             {% endif %}
 
         </div>
         <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
-        	<h4>{% trans 'ABOUT' %} </h4>
+          <h4>{% trans 'ABOUT' %} </h4>
             <a href="/{{ lang }}/articles/about_us">{% trans 'About Us' %}</a>
             <a href="/{{ lang }}/articles/careers">{% trans 'Careers' %}</a>
             <a href="/{{ lang }}/articles/press">{% trans 'Press' %}</a>
@@ -25,7 +25,7 @@
             <a href="/{{ lang }}/articles/security">{% trans  'Security' %}</a>
         </div>
         <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
-        	<h4>{% trans 'RESOURCES' %} </h4>
+          <h4>{% trans 'RESOURCES' %} </h4>
             <a href="/{{ lang }}/articles/faq">{% trans 'FAQ' %}</a>
 {#            <a href="/{{ lang }}/articles/blog">{% trans 'Blog' %}</a>#}
             <a href="/{{ lang }}/articles/fees">{% trans 'Fees' %}</a>
@@ -33,9 +33,9 @@
 {#            <a href="/{{ lang }}/articles/trading_guide">{% trans 'Trading Guide' %}</a>#}
         </div>
     <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
-   	  <h4>{% trans 'Social' %}</h4>
-      <a href="{{ social.twitter }}" class="footer_social"><img src="{% static 'images/tw-icon.png' %}" alt="Twitter"></a>
-       <a href="{{ social.facebook }}" class="footer_social"><img src="{% static 'images/fb-icon.png' %}" alt="Facebook"></a>
+      <h4>{% trans 'Social' %}</h4>
+      <a href="{{ contact.twitter }}" class="footer_social"><img src="{% static 'images/tw-icon.png' %}" alt="Twitter"></a>
+       <a href="{{ contact.facebook }}" class="footer_social"><img src="{% static 'images/fb-icon.png' %}" alt="Facebook"></a>
       </div>
   </div>
 </div>
