WIP: Feature/flip send ui (#438)
* Add order type to orders API.

* Initial rudimentary logic for recent orders showing on main screen.

* Fix some JS linting errors.

* Add date to orders API.

* Setup date. Install momentjs. Remove initial orders on recent_orders view.

* Add correct sending/receiving amounts. Calculate rate. Adjust date format.

* Add icon based on order type.

* Align table elements to the left. Show recent orders on main screen only.

* Small CSS/HTML fixes.

* Use RECENT_ORDERS_LENGTH setting for showing fixed number of recent orders. Fix scenario where there are no recent orders (probably only applicable on localhost when developing).

* Adjust orders API to include pair name. Add currencies traded in recent orders table.

* Remove type column. Change date format. Adjust table columns width.

* Handle error response on recent orders request.

* Use pagination for Orders API.

* Remove BUY/SELL UI and do initial changes to get flip-send widget working.

* Change buy/sell buttons on confirm to exchange. Adjust JS to reflect some of HTML changes. Still half functioning.

* Further refactoring to get FlipSendWidget ready for updated exchange.

* Get prices to be calculated correctly by using ticker.bid and extracting currencies being traded.

* Adjust minimum order amount logic to reflect new exchange widget. Adjust exchange sign animation.

* Add correct confirmation amounts.

* Adjust decimal places.

* Change decimal places of curency amount to 2 to reflect confirmation modal.

* Small CSS refactor into separate component. Remove inline style for flip exchange header.

* Remove pairs dropdown and adjust JS logic to accommodate the change. Random technical debt removal.

* Abstract away exchange sign animation. Move ticker graph initialization logic in FlipSendWidget constructor.

* Prevent same currency pairs. Refactor Notifier for wider usage.

* Fix menu change issues. Refactor and remove s

--- a/static/scss/components/orders.scss
+++ b/static/scss/components/orders.scss
@@ -51,3 +51,7 @@
 }
 
 #deposit-address-sell, #deposit-address-buy { height: 30px; border-color: #ccc; }
+
+.step-confirm {
+    h3.confirm-title { padding-bottom: 0; }
+}
