--- a/templates/orders/partials/steps/partials/step_anonym_auth_buttons.html
+++ b/templates/orders/partials/steps/partials/step_anonym_auth_buttons.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 
 <div class="col-xs-10 col-xs-offset-1 center controls user-anonymous">
-    <span class="btn btn-lg btn-primary verify-anonymous hidden disabled">
+    <button class="btn btn-lg btn-primary verify-anonymous hidden" disabled="disabled">
         {% trans "Go"%}
-    </span>
+    </button>
 </div>
