--- a/templates/orders/partials/orders_desktop.html
+++ b/templates/orders/partials/orders_desktop.html
@@ -2,12 +2,11 @@
 <div class="table-responsive visible-md visible-lg orders-root">
   <table class=" table-hover table-condensed col-lg-12">
     <tr class="table-order">
-        <th >{% trans "Type" %}</th>
-        <th >{% trans "Date" %}</th>
+        <th>{% trans "Date" %}</th>
+        <th>{% trans "Sending" %}</th>
+        <th>{% trans "Receiving" %}</th>
+        <th>{% trans "Rate" %}</th>
         <th>{% trans "Reference" %}</th>
-        <th>{% trans "Pair" %}</th>
-        <th>{% trans "Price" %}</th>
-        <th>{% trans "Volume" %}</th>
         <th>{% trans "Paid" %}</th>
         <th class="text-center">{% trans "Released" %}</th>
         <th class="text-center">{% trans "Completed" %}</th>
