--- a/templates/orders/partials/steps/step_amount.html
+++ b/templates/orders/partials/steps/step_amount.html
@@ -2,30 +2,19 @@
 {% load i18n %}
 {% block step_content %}
 
-    <div class="switch-pairs">
-        {% for curr in crypto_currencies %}
-            <button class="btn btn-lg btn-primary switch-currency-pairs" value="{{ curr.code }}" title="{{curr.name}}({{ curr.code }})">
-                {% if curr.code != 'RNS' %}
-                    <i class="cc {{ curr.code }}"></i>
-                {% else %}
-                    {{ curr.code }}
-                {% endif %}
-            </button>
-        {% endfor %}
-    </div>
+{#    <div class="switch-pairs"> #}
+{#        {% for curr in crypto_currencies %} #}
+{#            <button class="btn btn-lg btn-primary switch-currency-pairs" value="{{ curr.code }}" title="{{curr.name}}({{ curr.code }})"> #}
+{#                {% if curr.code != 'RNS' %} #}
+{#                    <i class="cc {{ curr.code }}"></i> #}
+{#                {% else %} #}
+{#                    {{ curr.code }} #}
+{#                {% endif %} #}
+{#            </button> #}
+{#        {% endfor %} #}
+{#    </div> #}
 
     <div class="chart_panel_selectbox_panel" style="width: 100%;">
-        <div class="input-group-btn" style="width: 49%; text-align: center;
-        margin: auto; display: inline-block">
-            <select name="currency_pair"
-                    class="currency-select currency-pair classic select2">
-                {% for pair in pairs %}
-                    <option value="{{ pair.name}}" class="currency-select currency-pair chart_panel_selectbox classic currency-{{ pair.base.code}} currency-{{ pair.quote.code}} crypto-{{ pair.is_crypto }}"
-                            data-fiat="{{ pair.quote.code }}"
-                            data-crypto={{ pair.base.code }}>{{ pair.base.code }}/{{pair.quote.code }}</option>
-                {% endfor %}
-            </select>
-        </div>
         <div style="width: 49%; text-align: center; margin: auto; display:
         inline-block">
             <select name="graph-range" id="graph-range"
@@ -39,25 +28,22 @@
     <div id="container-graph">
     </div>
 
-
     <div class="col-xs-12">
         <div class="row">
             <div class="col-xs-5 price_box price_box_ticker">
-                <span class="rate rate-buy"></span><br>
-                <span class="currency"></span><br>
-                <a href="#" class="trigger trigger-buy active-action">{% trans "Buy" %}</a>
+                <h2>DEPOSIT</h2>
             </div>
             <div class="col-xs-2"></div>
             <div class="col-xs-5 price_box price_box_ticker">
-                <span class="rate rate-sell"></span><br>
-                <span class="currency"></span><br>
-                <a href="#" class="price_box2_a trigger trigger-sell">{% trans "Sell" %}</a></div>
+                <h2>RECEIVE</h2>
+            </div>
         </div>
+    
         <div class="row">
             <div class="col-xs-5 price_box" id="pricebox_rub">
                 <div class="price_box_selectbox_cont">
-                    <input type="text" class="price_box_selectbox_cont_textbox amount amount-cash" placeholder="">
-                    <select name='currency_from' disabled="disabled"
+                    <input type="text" id="amount-deposit" class="price_box_selectbox_cont_textbox amount" placeholder=""> <!-- amount cash here, coin below -->
+                    <select name='currency_from' id="currency-from"
                             class='currency-select currency-from price_box_selectbox_cont_selectbox classic'>
                         {% for quote in quote_currencies %}
                             <option value="{{ quote.code }}">{{ quote.code }}</option>
@@ -66,18 +52,26 @@
                 </div>
             </div>
             <div class="col-xs-2 price_box_mid">
-                <i class="fa fa-refresh fa-5x exchange-sign" aria-hidden="true"></i>
+                <i id="exchange-sign" class="fa fa-refresh fa-5x" aria-hidden="true"></i>
             </div>
             <div class="col-xs-5 price_box" id="pricebox_btc">
 
                 <div class="price_box_selectbox_cont">
-                    <input type="text" class="price_box_selectbox_cont_textbox amount amount-coin" placeholder="0.5">
-                    <select name='currency_to' disabled="disabled"
+                    <input type="text" id="amount-receive" class="price_box_selectbox_cont_textbox amount" value="0.5" placeholder="0.5">
+                    <select name='currency_to' id="currency-to"
                             class='currency-select currency-to price_box_selectbox_cont_selectbox classic'>
                        {% for base in base_currencies %}
                            <option data-minimal-amount="{{ base.minimal_amount }}" value="{{ base.code }}">{{ base.code }}</option>
                        {% endfor %}
                      </select>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-xs-12">
+                <div class="price_box">
+                    <a href="#" class="price_box2_a trigger trigger-buy" style="background: #8dc73f; opacity: 1; width: 100%;">{% trans "Exchange" %}!</a>
                 </div>
             </div>
         </div>
