--- a/templates/rest_framework/api.html
+++ b/templates/rest_framework/api.html
@@ -6,7 +6,7 @@
 
 {% block branding %}
     <a class="navbar-brand" rel="nofollow" href="#">
-		<a href="#" class="navbar-left"><img src="https://nexchange.io/img/logo.png" style="max-width: 65px; margin: 25px 10px 0 0;"></a>
+		<a href="#" class="navbar-left"><img src="https://n.exchange/img/logo.png" style="max-width: 65px; margin: 25px 10px 0 0;"></a>
 		<h1 class="header-text" style="font-size: 36px; margin-top: 45px;">NE<span style="color: #1db6ad">X</span>CHANGE</h1>
     </a>
 {% endblock %}
