--- a/templates/rest_framework/api.html
+++ b/templates/rest_framework/api.html
@@ -5,10 +5,7 @@
 {% endblock %}
 
 {% block branding %}
-    <a class="navbar-brand" rel="nofollow" href="#">
-		<a href="#" class="navbar-left"><img src="https://n.exchange/img/logo.png" style="max-width: 65px; margin: 25px 10px 0 0;"></a>
-		<h1 class="header-text" style="font-size: 36px; margin-top: 45px;">NE<span style="color: #1db6ad">X</span>CHANGE</h1>
-    </a>
+    <a href="https://n.exchange" class="navbar-left"><img src="https://n.exchange/img/logo.svg" style="margin: 30px 10px 0 0; width: 250px;"></a>
 {% endblock %}
 
 {% block bootstrap_navbar_variant %}{% endblock %}
