--- a/templates/newsletter/message/message.html
+++ b/templates/newsletter/message/message.html
@@ -21,12 +21,14 @@
             <div><a href="{{ article.url }}">{% trans "Read more" %}</a></div>
         {% endif %}
     {% endfor %}
-    
+
+    {% comment %}
     <ul>
         {% if submission.publish %}
         <li><a href="http://{{ site.domain }}{{ submission.get_absolute_url }}">{% trans "Read message online" %}</a></li>
         {% endif %}
         <li><a href="http://{{ site.domain }}{% url "newsletter_unsubscribe_request" newsletter.slug %}">{% trans "Unsubscribe" %}</a></li>
     </ul>
+    {% endcomment %}
 </body>
 </html>
