--- a/templates/support/support.html
+++ b/templates/support/support.html
@@ -30,8 +30,8 @@
         <div class="info-address">
             <p class="support-arddress">Email</p>
             <p class="support-link">
-                <a href="mailto:{% trans "support@nexchange.co.uk" %}" target="_blank">
-                    {% trans "support@nexchange.co.uk" %}
+                <a href="mailto:{% trans "support@n.exchange" %}" target="_blank">
+                    {% trans "support@n.exchange" %}
                 </a>
             </p>
         </div>
